tests/cases/errors/enum_decl/main.sv
module Top;
  enum { A, B, C } e;
endmodule
